--- a/.github/workflows/currency_etl.yml
+++ b/.github/workflows/currency_etl.yml
@@ -10,7 +10,7 @@ on:
     branches:
       - main
     paths:
-      - 'ETL_Currency_Rate_Cloud.py'  
+      - 'currency_etl.py'  
 
 jobs:
   load-currency-data:
@@ -49,7 +49,7 @@ jobs:
         CDB_USER: ${{ secrets.CDB_USER }}
         CDB_PASSWORD: ${{ secrets.CDB_PASSWORD }}
       run: |
-        python currency_etl.py
+        python ETL_Currency_Rate_Cloud.py
     
     - name: Notify on failure
       if: failure()
